--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src="img/pastilla2_desktop.jpg" alt="Genetica">
                 </picture>
                 <figcaption>
-                    <h3>Ecologia</h3>
+                    <h3>Genética</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt? <a href="#">Ver mas ...</a></p>
                 </figcaption>
             </figure>
@@ -55,7 +55,7 @@
                     <img src="img/pastilla1_desktop.jpg" alt="Ecologia">
                 </picture>
                 <figcaption>
-                    <h3>Ecologia</h3>
+                    <h3>Ecología</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt? <a href="#">Ver mas ...</a></p>
                 </figcaption>
             </figure>
@@ -67,7 +67,7 @@
                     <img src="img/pastilla3_desktop.jpg" alt="Medio Ambiente">
                 </picture>
                 <figcaption>
-                    <h3>Ecologia</h3>
+                    <h3>Medio Ambiente</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt? <a href="#">Ver mas ...</a></p>
                 </figcaption>
             </figure>
@@ -102,16 +102,27 @@
             <p>Si nos trasladamos al siglo XVIII, cuando la biología y la geografía se estaban transformando en las ciencias modernas que hoy conocemos, es imprescindible reconocer el carácter absolutamente ecológico del trabajo de los fisiologistas en su progresivo descubrimiento de las relaciones entre la vida vegetal y animal con los factores abióticos tales como la luz, el agua o el carbono. Entre los muchos ejemplos posibles, es suficiente recordar las investigaciones de René Antoine Ferchault de Réaumur en el campo de la temperatura, así como las de Anton van Leeuwenhoek acerca de la formación del almidón en las plantas verdes. Destacan también en esta época, los trabajos de Louis Receveur, botánico , geólogo , químico , meteorólogo, astrónomo y sacerdote francés.</p>
 
         </section>
+
         <section id = "video">
-            <h2>¿Porque estudiar ECOLOGIA?</h2>
+            <h2>¿Por qué estudiar Ecología?</h2>
             <iframe src="https://www.youtube.com/embed/Xj5mSPttrww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
+        
         <section id = "contacto">
             <h2>Contancto</h2>
+            <form action="#" method="post" target="_blank">
+                <label for="nombre">Nombre :</label>
+                <input type="text" name = "nombre" required>
+                <label for="apellido">Apellido :</label>
+                <input type="text" name = "apellido" required>
+                <label for="email">EMail :</label>
+                <input type="email" name = "email" required>
+                <input type="submit">
+            </form>
         </section>
     </main>
     <footer>
-
+        <p>Copyrigth</p>
     </footer>
 </body> 
 </html>
