--- a/index.html
+++ b/index.html
@@ -102,10 +102,9 @@
             <p>Si nos trasladamos al siglo XVIII, cuando la biología y la geografía se estaban transformando en las ciencias modernas que hoy conocemos, es imprescindible reconocer el carácter absolutamente ecológico del trabajo de los fisiologistas en su progresivo descubrimiento de las relaciones entre la vida vegetal y animal con los factores abióticos tales como la luz, el agua o el carbono. Entre los muchos ejemplos posibles, es suficiente recordar las investigaciones de René Antoine Ferchault de Réaumur en el campo de la temperatura, así como las de Anton van Leeuwenhoek acerca de la formación del almidón en las plantas verdes. Destacan también en esta época, los trabajos de Louis Receveur, botánico , geólogo , químico , meteorólogo, astrónomo y sacerdote francés.</p>
 
         </section>
-
         <section id = "video">
             <h2>¿Por qué estudiar Ecología?</h2>
-            <iframe src="https://www.youtube.com/embed/Xj5mSPttrww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Xj5mSPttrww" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         
         <section id = "contacto">
