--- a/index.html
+++ b/index.html
@@ -111,17 +111,30 @@
             <h2>Contancto</h2>
             <form action="#" method="post" target="_blank">
                 <label for="nombre">Nombre :</label>
-                <input type="text" name = "nombre" required>
+                <input type="text" name = "nombre" id = "nombre" required>
                 <label for="apellido">Apellido :</label>
-                <input type="text" name = "apellido" required>
+                <input type="text" name = "apellido" id = "apellido" required>
                 <label for="email">EMail :</label>
-                <input type="email" name = "email" required>
-                <input type="submit">
+                <input type="email" name = "email" id = "email" required>
+                <input type="submit" id = "boton">
             </form>
         </section>
     </main>
     <footer>
-        <p>Copyrigth</p>
+        <div>
+            <ul>
+                <li>Daniel Fimiani</li>
+                <li>Interaccion con Dispositivos Moviles</li>
+                <li>DWN2A</li>
+                <li>daniel.fimiani@davinci.edu.ar</li>
+            </ul>
+            <ul>
+                <li><a href="#" id="facebook">Facebook</a></li>
+                <li><a href="#" id="twitter">Twitter</a></li>
+                <li><a href="#" id="instagram">Instagram</a></li>
+            </ul>
+        </div>    
+        <p>© Escuela Davinci- 2019</p>
     </footer>
 </body> 
 </html>
