--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id = "banner">
             <figure>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="img/banner_mobile.jpg">
+                    <source media="(max-width: 570px)" srcset="img/banner_mobile.jpg">
                     <source media="(max-width: 900px)" srcset="img/banner_tablet.jpg">
                     <img src="img/banner_desktop.jpg" alt="Banner">
                 </picture> 
@@ -39,7 +39,7 @@
             <h2>Noticias</h2>
             <figure>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="img/pastilla2_mobile.jpg">
+                    <source media="(max-width: 570px)" srcset="img/pastilla2_mobile.jpg">
                     <source media="(max-width: 900px)" srcset="img/pastilla2_tablet.jpg">
                     <img src="img/pastilla2_desktop.jpg" alt="Genetica">
                 </picture>
@@ -50,7 +50,7 @@
             </figure>
             <figure>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="img/pastilla1_mobile.jpg">
+                    <source media="(max-width: 570px)" srcset="img/pastilla1_mobile.jpg">
                     <source media="(max-width: 900px)" srcset="img/pastilla1_tablet.jpg">
                     <img src="img/pastilla1_desktop.jpg" alt="Ecologia">
                 </picture>
@@ -62,7 +62,7 @@
 
             <figure>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="img/pastilla3_mobile.jpg">
+                    <source media="(max-width: 570px)" srcset="img/pastilla3_mobile.jpg">
                     <source media="(max-width: 900px)" srcset="img/pastilla3_tablet.jpg">
                     <img src="img/pastilla3_desktop.jpg" alt="Medio Ambiente">
                 </picture>
@@ -74,8 +74,8 @@
 
             <figure>
                 <picture>
-                    <source media="(max-width: 320px)" srcset="img/pastilla4_mobile.jpg">
-                    <source media="(max-width: 900px)" srcset="img/pastilla4_tablet.jpg">
+                    <source media="(max-width: 570px)" srcset="img/pastilla4_mobile.jpg">
+                    <source media="(max-width: 570px)" srcset="img/pastilla4_tablet.jpg">
                     <img src="img/pastilla4_desktop.jpg" alt="Social">
                 </picture>
                 <figcaption>
@@ -129,9 +129,39 @@
                 <li>daniel.fimiani@davinci.edu.ar</li>
             </ul>
             <ul>
-                <li><a href="#" id="facebook">Facebook</a></li>
-                <li><a href="#" id="twitter">Twitter</a></li>
-                <li><a href="#" id="instagram">Instagram</a></li>
+                <li>
+                    <a href="#" id="facebook">
+                        <figure>
+                            <picture>
+                                <source media="(max-width: 570px)" srcset="img/icons8-facebook-old-48.png">
+                                <source media="(max-width: 900px)" srcset="img/icons8-facebook-old-96.png">
+                                <img src="img/icons8-facebook-old-480.png" alt="icono facebook">
+                            </picture> 
+                        </figure>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="twitter">
+                        <figure>
+                            <picture>
+                                <source media="(max-width: 570px)" srcset="img/icons8-twitter-48.png">
+                                <source media="(max-width: 900px)" srcset="img/icons8-twitter-96.png">
+                                <img src="img/icons8-twitter-480.png" alt="icono twitter">
+                            </picture> 
+                        </figure>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" id="instagram"> 
+                        <figure>
+                            <picture>
+                                <source media="(max-width: 570px)" srcset="img/icons8-instagram-48.png"">
+                                <source media="(max-width: 900px)" srcset="img/icons8-instagram-96.png"">
+                                <img src="img/icons8-instagram-480.png" alt="Banner">
+                            </picture> 
+                        </figure>
+                    </a>
+                </li>
             </ul>
         </div>    
         <p>© Escuela Davinci- 2019</p>
