--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 </picture>
                 <figcaption>
                     <h3>Genética</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt? <a href="#">Ver mas ...</a></p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt?</p>
+                    <a href="#">Ver mas ...</a>
                 </figcaption>
             </figure>
             <figure>
@@ -57,7 +58,8 @@
                 </picture>
                 <figcaption>
                     <h3>Ecología</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt? <a href="#">Ver mas ...</a></p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt?</p>
+                    <a href="#">Ver mas ...</a>
                 </figcaption>
             </figure>
 
@@ -69,7 +71,8 @@
                 </picture>
                 <figcaption>
                     <h3>Medio Ambiente</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt? <a href="#">Ver mas ...</a></p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt?</p>
+                    <a href="#">Ver mas ...</a>
                 </figcaption>
             </figure>
 
@@ -81,7 +84,8 @@
                 </picture>
                 <figcaption>
                     <h3>Social</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt? <a href="#">Ver mas ...</a></p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet similique magnam nihil, voluptatum aliquam, vel odio nesciunt pariatur facilis doloremque corrupti accusantium laboriosam recusandae temporibus doloribus ut nam. Eligendi, sunt?</p>
+                    <a href="#">Ver mas ...</a>
                 </figcaption>
             </figure>
         </section>
@@ -133,7 +137,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="#" id="facebook">
+                    <a href="#">
                         <figure>
                             <picture>
                                 <source media="(max-width: 570px)" srcset="img/icons8-facebook-old-48.png">
@@ -144,7 +148,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" id="twitter">
+                    <a href="#">
                         <figure>
                             <picture>
                                 <source media="(max-width: 570px)" srcset="img/icons8-twitter-48.png">
@@ -155,7 +159,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" id="instagram"> 
+                    <a href="#"> 
                         <figure>
                             <picture>
                                 <source media="(max-width: 570px)" srcset="img/icons8-instagram-48.png"">
