--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id = "banner">
             <figure>
                 <picture>
-                    <source media="(max-width: 570px)" srcset="img/banner_mobile.jpg">
+                    <source media="(max-width: 480px)" srcset="img/banner_mobile.jpg">
                     <source media="(max-width: 900px)" srcset="img/banner_tablet.jpg">
                     <img src="img/banner_desktop.jpg" alt="Banner">
                 </picture> 
@@ -40,7 +40,7 @@
             <h2>Noticias</h2>
             <figure>
                 <picture>
-                    <source media="(max-width: 570px)" srcset="img/pastilla2_mobile.jpg">
+                    <source media="(max-width: 480px)" srcset="img/pastilla2_mobile.jpg">
                     <source media="(max-width: 900px)" srcset="img/pastilla2_tablet.jpg">
                     <img src="img/pastilla2_desktop.jpg" alt="Genetica">
                 </picture>
@@ -52,7 +52,7 @@
             </figure>
             <figure>
                 <picture>
-                    <source media="(max-width: 570px)" srcset="img/pastilla1_mobile.jpg">
+                    <source media="(max-width: 480px)" srcset="img/pastilla1_mobile.jpg">
                     <source media="(max-width: 900px)" srcset="img/pastilla1_tablet.jpg">
                     <img src="img/pastilla1_desktop.jpg" alt="Ecologia">
                 </picture>
@@ -162,8 +162,8 @@
                     <a href="#"> 
                         <figure>
                             <picture>
-                                <source media="(max-width: 570px)" srcset="img/icons8-instagram-48.png"">
-                                <source media="(max-width: 900px)" srcset="img/icons8-instagram-96.png"">
+                                <source media="(max-width: 570px)" srcset="img/icons8-instagram-48.png">
+                                <source media="(max-width: 900px)" srcset="img/icons8-instagram-96.png">
                                 <img src="img/icons8-instagram-480.png" alt="Banner">
                             </picture> 
                         </figure>
