--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
                     <a href="#">
                         <figure>
                             <picture>
-                                <source media="(max-width: 570px)" srcset="img/icons8-facebook-old-48.png">
-                                <source media="(max-width: 900px)" srcset="img/icons8-facebook-old-96.png">
-                                <img src="img/icons8-facebook-old-480.png" alt="icono facebook">
+                                <source media="(max-width: 481px)" srcset="img/icons8-facebook-old-48.png">
+                                <img src="img/icons8-facebook-old-96.png" alt="icono facebook">
                             </picture> 
+                            <figcaption>Facebook</figcaption>
                         </figure>
                     </a>
                 </li>
@@ -151,10 +151,10 @@
                     <a href="#">
                         <figure>
                             <picture>
-                                <source media="(max-width: 570px)" srcset="img/icons8-twitter-48.png">
-                                <source media="(max-width: 900px)" srcset="img/icons8-twitter-96.png">
-                                <img src="img/icons8-twitter-480.png" alt="icono twitter">
+                                <source media="(max-width: 481px)" srcset="img/icons8-twitter-48.png">
+                                <img src="img/icons8-twitter-96.png" alt="icono twitter">
                             </picture> 
+                            <figcaption>Twitter</figcaption>
                         </figure>
                     </a>
                 </li>
@@ -162,10 +162,10 @@
                     <a href="#"> 
                         <figure>
                             <picture>
-                                <source media="(max-width: 570px)" srcset="img/icons8-instagram-48.png">
-                                <source media="(max-width: 900px)" srcset="img/icons8-instagram-96.png">
-                                <img src="img/icons8-instagram-480.png" alt="Banner">
+                                <source media="(max-width: 481px)" srcset="img/icons8-instagram-48.png">
+                                <img src="img/icons8-instagram-96.png" alt="Banner">
                             </picture> 
+                            <figcaption>Instagram</figcaption>
                         </figure>
                     </a>
                 </li>
