--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <main>
         
         <section id = "banner">
+            <h2>Banner</h2>
             <figure>
                 <picture>
                     <source media="(max-width: 480px)" srcset="img/banner_mobile.jpg">
