agrego textarea al form

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
                 <input type="text" name = "apellido" id = "apellido" required>
                 <label for="email">EMail :</label>
                 <input type="email" name = "email" id = "email" required>
+                <label for="texto">Comentarios:</label>
+                <textarea name="texto" id="texto" cols="30" rows="10"></textarea>
                 <input type="submit" id = "boton">
             </form>
         </section>
