agrego envio mail

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
 
         <section id = "video">
             <h2>¿Por qué estudiar Ecología?</h2>
-            <iframe src="https://www.youtube.com/embed/Xj5mSPttrww" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Xj5mSPttrww" allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
         </section>
 
         <section id = "contacto">
             <h2>Contancto</h2>
-            <form action="#" method="post" target="_blank">
+            <form action="https://formspree.io/danielfimiani@outlook.com" method="POST" target="_blank" id="formulario">
                 <label for="nombre">Nombre :</label>
                 <input type="text" name = "nombre" id = "nombre" required>
                 <label for="apellido">Apellido :</label>
