--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <section id = "contacto">
             <h2>Contancto</h2>
-            <form action="https://formspree.io/danielfimiani@outlook.com" method="POST" target="_blank" id="formulario">
+            <form action="https://script.google.com/macros/s/AKfycbxf_Qqv9TaTD2Ztw9S4YIUW7r6cBbZD3WlRJcdKPg/exec" method="POST" target="_blank" id="formulario">
                 <label for="nombre">Nombre :</label>
                 <input type="text" name = "nombre" id = "nombre" required>
                 <label for="apellido">Apellido :</label>
